--- a/ToolsWebApplication/Views/Shared/_Layout.cshtml
+++ b/ToolsWebApplication/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Tools">Tools</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                 </ul>
             </div>
@@ -41,7 +41,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2017 - ToolsWebApplication</p>
+            <p>&copy; 2017 - Mayu-Sakuma</p>
         </footer>
     </div>
 
