--- a/ToolsWebApplication/Views/Home/SplitApp.cshtml
+++ b/ToolsWebApplication/Views/Home/SplitApp.cshtml
@@ -15,13 +15,11 @@
 
     <div class="input">
         <form asp-action="SplitCSV">
-            <div id="droppable" style="border: gray solid 1em; padding: 2em; ">
-                ファイルをドロップしてください。
-            </div>
-            <input type="submit" id="ret" name="droppable" value="分割">
+            <input type="text" id="droppable" name="droppable" value="" placeholder="ファイルをドロップしてください。" style="border: gray solid 1em; padding: 2em; width:100%;">         
+            <input type="submit" value="送信">
         </form>
     </div>
-   
+
     <div class="output">
         <div class="outputfiles">
             @ViewData["csvData"]
