column 修正、とりあえず1列目の列挙を生成できた

--- a/ToolsWebApplication/Views/Home/InsertApp.cshtml
+++ b/ToolsWebApplication/Views/Home/InsertApp.cshtml
@@ -22,7 +22,11 @@
 
 <div class="output">
     <div class="outputfiles">
-        @ViewData["csvData"]
+        <% foreach(var a in ) { %>
+        <div>
+            <%: psObject %>
+        </div>
+        <% } 
     </div>
     <button id="download-zip">Download on Zip</button>
 </div>
