--- a/ToolsWebApplication/Views/Home/SplitApp.cshtml
+++ b/ToolsWebApplication/Views/Home/SplitApp.cshtml
@@ -1,11 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Tools";
 }
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-@*ファイルをドラックで持ってこれるようにするjs*@
-<script type="text/javascript" src="~/js/droppable.js" asp-append-version="true"></script>
-@*パラメータ付けるイメージで書いたjs*@
-<script type="text/javascript" src="~/js/addParameter.js" asp-append-version="true"></script>
+
 
 <div class="title">
     <h1>@ViewData["Title"]</h1>
@@ -43,4 +39,11 @@
         </div>
         <button class="downloadBtn" id="/Download">Download on Zip</button>
     </div>
+
+    @*とりあえずajax*@
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    @*ファイルをドラックで持ってこれるようにするjs*@
+    <script type="text/javascript" src="~/js/droppable.js" asp-append-version="true"></script>
+    @*パラメータ付けるイメージで書いたjs*@
+    <script type="text/javascript" src="~/js/addParameter.js" asp-append-version="true"></script>
 </div>
